--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header img {
   height: 200px;
   margin-top: 60px;
 }
-.car__block {
+.cart__block {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -182,12 +182,12 @@ main h3 {
 .car__product__button button:hover {
   transform: scale(1.1);
 }
-.car__block hr {
+.cart__block hr {
   border: none;
   height: 1px;
   background-color: #43434336;
 }
-.car__block .empty__button {
+.cart__block .empty__button {
   width: 150px;
   background-color: #274671;
   color: white;
@@ -198,7 +198,7 @@ main h3 {
   margin-bottom: 30px;
   border-radius: 20px;
 }
-.car__block .empty__button:hover {
+.cart__block .empty__button:hover {
   transform: translateY(-3PX);
 }
 .modal__elements{
@@ -229,7 +229,7 @@ main h3 {
   display: block;
 }
 @media screen and (max-width:768px){
-  .car__block {
+  .cart__block {
     width: 60%;
   }
   .nav__car__visible {
